// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils calculateCharacterRangesFromLineChanges() brand-new-json-file 1`] = `
[
  {
    "rangeEnd": 19,
    "rangeStart": 0,
  },
]
`;

exports[`utils calculateCharacterRangesFromLineChanges() brand-new-json-file 2`] = `
[
  {
    "rangeEnd": 21,
    "rangeStart": 0,
  },
]
`;

exports[`utils calculateCharacterRangesFromLineChanges() brand-new-json-file 3`] = `
[
  {
    "rangeEnd": 19,
    "rangeStart": 0,
  },
]
`;

exports[`utils calculateCharacterRangesFromLineChanges() brand-new-jsx-file 1`] = `
[
  {
    "rangeEnd": 661,
    "rangeStart": 0,
  },
]
`;

exports[`utils calculateCharacterRangesFromLineChanges() brand-new-jsx-file 2`] = `
[
  {
    "rangeEnd": 681,
    "rangeStart": 0,
  },
]
`;

exports[`utils calculateCharacterRangesFromLineChanges() brand-new-jsx-file 3`] = `
[
  {
    "rangeEnd": 661,
    "rangeStart": 0,
  },
]
`;

exports[`utils calculateCharacterRangesFromLineChanges() empty-javascript-file 1`] = `
[
  {
    "rangeEnd": 53,
    "rangeStart": 0,
  },
]
`;

exports[`utils calculateCharacterRangesFromLineChanges() empty-javascript-file 2`] = `
[
  {
    "rangeEnd": 54,
    "rangeStart": 0,
  },
]
`;

exports[`utils calculateCharacterRangesFromLineChanges() empty-javascript-file 3`] = `
[
  {
    "rangeEnd": 53,
    "rangeStart": 0,
  },
]
`;

exports[`utils calculateCharacterRangesFromLineChanges() formatting-would-affect-total-line-count 1`] = `
[
  {
    "rangeEnd": 76,
    "rangeStart": 63,
  },
  {
    "rangeEnd": 131,
    "rangeStart": 106,
  },
]
`;

exports[`utils calculateCharacterRangesFromLineChanges() formatting-would-affect-total-line-count 2`] = `
[
  {
    "rangeEnd": 82,
    "rangeStart": 67,
  },
  {
    "rangeEnd": 142,
    "rangeStart": 115,
  },
]
`;

exports[`utils calculateCharacterRangesFromLineChanges() formatting-would-affect-total-line-count 3`] = `
[
  {
    "rangeEnd": 76,
    "rangeStart": 63,
  },
  {
    "rangeEnd": 131,
    "rangeStart": 106,
  },
]
`;

exports[`utils calculateCharacterRangesFromLineChanges() multiple-updated-lines-javascript-file 1`] = `
[
  {
    "rangeEnd": 128,
    "rangeStart": 33,
  },
  {
    "rangeEnd": 171,
    "rangeStart": 134,
  },
]
`;

exports[`utils calculateCharacterRangesFromLineChanges() multiple-updated-lines-javascript-file 2`] = `
[
  {
    "rangeEnd": 130,
    "rangeStart": 34,
  },
  {
    "rangeEnd": 176,
    "rangeStart": 139,
  },
]
`;

exports[`utils calculateCharacterRangesFromLineChanges() multiple-updated-lines-javascript-file 3`] = `
[
  {
    "rangeEnd": 128,
    "rangeStart": 33,
  },
  {
    "rangeEnd": 171,
    "rangeStart": 134,
  },
]
`;

exports[`utils calculateCharacterRangesFromLineChanges() single-updated-line-typescript 1`] = `
[
  {
    "rangeEnd": 29,
    "rangeStart": 15,
  },
]
`;

exports[`utils calculateCharacterRangesFromLineChanges() single-updated-line-typescript 2`] = `
[
  {
    "rangeEnd": 30,
    "rangeStart": 16,
  },
]
`;

exports[`utils calculateCharacterRangesFromLineChanges() single-updated-line-typescript 3`] = `
[
  {
    "rangeEnd": 29,
    "rangeStart": 15,
  },
]
`;

exports[`utils calculateCharacterRangesFromLineChanges() updated-class-body 1`] = `
[
  {
    "rangeEnd": 75,
    "rangeStart": 17,
  },
]
`;

exports[`utils calculateCharacterRangesFromLineChanges() updated-class-body 2`] = `
[
  {
    "rangeEnd": 78,
    "rangeStart": 18,
  },
]
`;

exports[`utils calculateCharacterRangesFromLineChanges() updated-class-body 3`] = `
[
  {
    "rangeEnd": 75,
    "rangeStart": 17,
  },
]
`;

exports[`utils extractLineChangeData() brand-new-json-file 1`] = `
{
  "additions": [
    {
      "noOfLines": 3,
      "start": 1,
    },
  ],
  "removals": [],
}
`;

exports[`utils extractLineChangeData() brand-new-jsx-file 1`] = `
{
  "additions": [
    {
      "noOfLines": 21,
      "start": 1,
    },
  ],
  "removals": [],
}
`;

exports[`utils extractLineChangeData() empty-javascript-file 1`] = `
{
  "additions": [
    {
      "noOfLines": 2,
      "start": 1,
    },
  ],
  "removals": [],
}
`;

exports[`utils extractLineChangeData() formatting-would-affect-total-line-count 1`] = `
{
  "additions": [
    {
      "noOfLines": 2,
      "start": 5,
    },
    {
      "noOfLines": 2,
      "start": 10,
    },
  ],
  "removals": [
    {
      "noOfLines": 1,
      "start": 5,
    },
  ],
}
`;

exports[`utils extractLineChangeData() multiple-updated-lines-javascript-file 1`] = `
{
  "additions": [
    {
      "noOfLines": 1,
      "start": 2,
    },
    {
      "noOfLines": 1,
      "start": 6,
    },
  ],
  "removals": [
    {
      "noOfLines": 1,
      "start": 2,
    },
  ],
}
`;

exports[`utils extractLineChangeData() single-updated-line-typescript 1`] = `
{
  "additions": [
    {
      "noOfLines": 1,
      "start": 2,
    },
  ],
  "removals": [
    {
      "noOfLines": 1,
      "start": 2,
    },
  ],
}
`;

exports[`utils extractLineChangeData() updated-class-body 1`] = `
{
  "additions": [
    {
      "noOfLines": 2,
      "start": 2,
    },
  ],
  "removals": [
    {
      "noOfLines": 2,
      "start": 2,
    },
  ],
}
`;
